--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -96,7 +96,7 @@ input[type="color"].form-control {
 header {
     position: relative;
     width: 100%;
-    height: 30vh;
+    height: 50vh;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -106,6 +106,12 @@ header {
     background-attachment: fixed;
     text-align: center;
     color: white;
+}
+
+@media (min-width: 768px) {
+	header {
+	    height: 16vh;	
+	}	
 }
 
 .common-home header {
@@ -134,6 +140,8 @@ header {
 }
 
 #logo {
+	display: inline-block;
+	vertical-align: top;
     margin-left: 10px;
     transition: all 0.35s;
 }
@@ -144,23 +152,29 @@ header {
 }
 
 #logo.affix {
+	position: inherit;
     margin-left: 10px !important;
 }
 
-.header-content .header-content-inner {
-    display: none;
-}
-
-.common-home .header-content .header-content-inner {
-	display: block;
-}
  .header-content {
-    display: block;
+    display: none;
     position: absolute;
     text-align: center;
-    padding: 20px 15px;
     width: 100%;
-    top: 10%;
+    // width: 100%;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center; 
+    // overflow: auto; 
+
+}
+
+.common-home .header-content {
+	display: block;
+	top: 10%
 }
 
 @media (min-width: 768px) {
@@ -179,7 +193,7 @@ header {
     }
 }
 
-.header-content h1 {
+.header-content .header-content-inner h1  {
     margin: 0;
     padding: 5px 10px;
     color: #ffffff;
@@ -188,15 +202,17 @@ header {
     font-weight: 300;
 }
 
-.header-content span {
+.header-content .header-content-inner span {
     font-weight: 700;
 }
+
 
 .header-content .header-search-form {
     margin: 30px auto;
     padding: 40px 10px 20px 10px;
     background-color: rgba(255, 255, 255, 0.24);
     max-width: 700px;
+
 }
 
 .header-content .header-search-form .form-item {
@@ -214,7 +230,7 @@ header {
 
 @media (min-width:768px) {
     .header-content .header-search-form .form-item {
-        width: 39%;
+        width: 38%;
     }
     .header-content .header-search-form .form-item:last-child {
         width: 130px;
@@ -433,37 +449,23 @@ div.required .control-label:before {
 #menu {
     border: none;
     padding: 20px 0 0;
+    text-align: center;
     min-height: 80px;
-}
-
-// .navbar-nav {
-// 	background-color: #cb4d3d;
-// 	margin: 0px -15px;
-// }
-// .navbar-nav:before {
-//     position: relative;
-//     left: -100%;
-//     border-bottom: 80px solid #cb4d3d;
-//     border-left: 20px solid transparent;
-//     display: inline-block;
-//     vertical-align: top;	
-// }
-@media (min-width: 768px) {
-    .navbar-nav {
-        height: 80px;
-        float: right;
-    }
-}
-
-.d10 {
-    height: 0px;
-    border-bottom: 80px solid rgba(205, 79, 56, 0.5);
-    border-left: 20px solid transparent;
-}
-
-#menu {
     background-color: transparent;
     transition: all 0.35s;
+}
+
+.corner-border {
+    height: auto;
+    border:none;
+}
+
+@media (min-width: 768px) {
+	.corner-border {
+	    height: 0px;
+	    border-bottom: 80px solid rgba(255, 255, 255, 0.24);
+	    border-left: 20px solid transparent;
+	}	
 }
 
 #menu.affix {
@@ -472,9 +474,113 @@ div.required .control-label:before {
     box-shadow: 0.5px 0.866px 5px 0 rgba(0, 0, 0, .2);
 }
 
-#menu.affix .d10 {
-    border-bottom: 80px solid rgba(203, 77, 61, 1);
-    border-left: 20px solid transparent;
+@media (min-width: 768px) { 
+	#menu.affix .corner-border {
+	    border-bottom: 80px solid rgba(203, 77, 61, 1);
+	    border-left: 20px solid transparent;
+	}
+}
+
+#menu .navbar-search {
+	display: inline-block;
+	vertical-align: top;
+	margin-bottom: 20px;
+    padding: 20px 10px 0px 10px;
+    background-color: rgba(255, 255, 255, 0.24);
+    max-width: 700px;
+}
+
+@media (min-width:1200px) {
+	#menu .navbar-search {
+		margin-bottom: 0;
+	}	
+}
+
+.common-home #menu .navbar-search {
+	display: none;
+}
+
+#menu .navbar-search .search-item {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 0 3px;
+}
+
+#menu .navbar-search .search-item .btn {
+    width: 100%;
+}
+
+@media (min-width:768px) {
+    #menu .navbar-search .search-item {
+        width: 38%;
+    }
+    #menu .navbar-search .search-item:last-child {
+        width: 130px;
+    }
+}
+
+#menu .navbar-search input {
+    border: none;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -khtml-border-radius: 0px;
+    background: #ffffff !important;
+    outline: none;
+    height: 40px;
+    width: 100%;
+    color: #333;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 0 10px 0 40px;
+}
+
+#menu .navbar-search .fa {
+    position: absolute;
+    left: 15px;
+    top: 4px;
+    color: #c3c3c3;
+    font-size: 30px;
+}
+
+#menu .navbar-search .search-item:hover .fa {
+    color: #cd4f38;
+}
+
+.common-home #menu .navbar-collapse {
+	top: 80px;
+}
+
+@media (min-width: 768px) {
+	.common-home #menu .navbar-collapse {
+		top: 0;
+	}	
+}
+#menu .navbar-collapse {
+	position: absolute;
+	top: 110px;
+	width: 100%;
+	background-color: #cb4d3d;
+	border: none;
+}
+
+
+
+@media (min-width: 768px) {
+	#menu .navbar-collapse {
+		position: relative;
+		top: 0;
+		float: right;
+		width: auto;
+		background-color: transparent;
+	}	
+}
+
+#menu .navbar-nav {
+    text-align: center;
 }
 
 #menu .nav li:first-child a {
@@ -561,19 +667,13 @@ div.required .control-label:before {
 }
 
 #menu .btn-navbar {
-    position: absolute;
     font-size: 20px;
     font-stretch: expanded;
     color: #FFF;
     padding: 2px 18px;
     background-color: #cb4d3d;
-    top: 25px;
-    right: 0px;
+    top: 5px;
     transition: all 0.35s;
-}
-
-#menu .btn-navbar.affix {
-	top: 10px;
 }
 
 #menu .btn-navbar:hover,
@@ -582,7 +682,8 @@ div.required .control-label:before {
 #menu .btn-navbar.disabled,
 #menu .btn-navbar[disabled] {
     color: #ffffff;
-    background-color: #229ac8;
+    background-color: #b53626;
+    outline: none;
 }
 
 @media (min-width: 768px) {
@@ -731,6 +832,7 @@ footer h5 {
     font-size: 15px;
     font-weight: 700;
     font-style: italic;
+    line-height: 25px;
     text-transform: uppercase;
     border: none;
     border-radius: 0;
