--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -5,6 +5,15 @@ body {
     font-size: 12px;
     line-height: 20px;
     width: 100%;
+    background-color: #eee;
+
+    // -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // background-size: cover;
+    // -o-background-size: cover;
+    // background-position: center center;
+    // background-image: url(/image/catalog/bg-black.jpg);
+    // background-attachment: fixed;
 }
 
 h1,
@@ -62,6 +71,7 @@ label {
     font-weight: normal;
 }
 
+
 select.form-control,
 textarea.form-control,
 input[type="text"].form-control,
@@ -88,9 +98,26 @@ input[type="color"].form-control {
     font-size: 12px;
 }
 
+.sort-group {
+	float: right;
+}
+
 .input-group .input-group-addon {
     font-size: 12px;
     height: 30px;
+    border: none;
+    border-radius: 0;
+}
+
+.input-group .form-control {
+	border: 1px solid #eee;
+	border-radius: 0;
+	outline: none;
+	webkit-box-shadow: none;
+    box-shadow:none; 
+}
+option {
+	border: 2px solid #000 !important;
 }
 
 header {
@@ -111,6 +138,12 @@ header {
 @media (min-width: 768px) {
 	header {
 	    height: 16vh;	
+	}	
+}
+
+@media (min-width: 1400px) {
+	header {
+	    height: 13vh;	
 	}	
 }
 
@@ -198,7 +231,6 @@ header {
     padding: 5px 10px;
     color: #ffffff;
     font-size: 35px;
-    font-style: italic;
     font-weight: 300;
 }
 
@@ -207,7 +239,7 @@ header {
 }
 
 
-.header-content .header-search-form {
+.header-content .header-search {
     margin: 30px auto;
     padding: 40px 10px 20px 10px;
     background-color: rgba(255, 255, 255, 0.24);
@@ -215,7 +247,7 @@ header {
 
 }
 
-.header-content .header-search-form .form-item {
+.header-content .header-search .search-item {
     position: relative;
     display: inline-block;
     vertical-align: top;
@@ -224,20 +256,20 @@ header {
     padding: 0 3px;
 }
 
-.header-content .header-search-form .form-item .btn {
+.header-content .header-search .search-item .btn {
     width: 100%;
 }
 
 @media (min-width:768px) {
-    .header-content .header-search-form .form-item {
+    .header-content .header-search .search-item {
         width: 38%;
     }
-    .header-content .header-search-form .form-item:last-child {
+    .header-content .header-search .search-item:last-child {
         width: 130px;
     }
 }
 
-.header-content .header-search-form input {
+.header-content .header-search input {
     border: none;
     border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -253,7 +285,7 @@ header {
     padding: 0 10px 0 40px;
 }
 
-.header-content .header-search-form .fa {
+.header-content .header-search .fa {
     position: absolute;
     left: 15px;
     top: 4px;
@@ -261,9 +293,24 @@ header {
     font-size: 30px;
 }
 
-.header-content .header-search-form .form-item:hover .fa {
+.header-content .header-search .search-item:hover .fa {
     color: #cd4f38;
 }
+
+.search-item .error-where,
+.search-item .error-wherefrom {
+	display: none;
+	color: #fff;
+	background-color: #cb4d3d;
+	text-align: left;
+    padding: 3px 20px;
+    text-transform: uppercase;
+}
+
+.search-item .error.show {
+	display: block;
+}
+
 
 
 /* Fix some bootstrap issues */
@@ -300,6 +347,11 @@ div.required .control-label:before {
     width: 100%;
 }
 
+@media (min-width: 768px) {
+	.container {
+	    max-width: 1050px;
+	}
+}
 
 /* top */
 
@@ -449,10 +501,15 @@ div.required .control-label:before {
 #menu {
     border: none;
     padding: 20px 0 0;
-    text-align: center;
     min-height: 80px;
     background-color: transparent;
     transition: all 0.35s;
+}
+
+@media (min-width: 768px) {
+	#menu {
+		text-align: center;
+	}
 }
 
 .corner-border {
@@ -484,16 +541,20 @@ div.required .control-label:before {
 #menu .navbar-search {
 	display: inline-block;
 	vertical-align: top;
-	margin-bottom: 20px;
+	margin: 10px 0 20px;
     padding: 20px 10px 0px 10px;
     background-color: rgba(255, 255, 255, 0.24);
     max-width: 700px;
 }
 
-@media (min-width:1200px) {
+@media (min-width: 768px) {
 	#menu .navbar-search {
-		margin-bottom: 0;
+		margin: 0;
 	}	
+}
+
+#menu.affix .navbar-search {
+	background-color: transparent;
 }
 
 .common-home #menu .navbar-search {
@@ -583,7 +644,12 @@ div.required .control-label:before {
     text-align: center;
 }
 
-#menu .nav li:first-child a {
+#menu .navbar-nav .dropdown-menu li:first-child a {
+    margin-left: 0px;
+    padding-left: 20px !important;
+}
+
+#menu .navbar-nav li:first-child a {
     margin-left: -20px;
     padding-left: 30px !important;
 }
@@ -593,7 +659,6 @@ div.required .control-label:before {
     min-height: 15px;
     background-color: transparent;
     text-transform: uppercase;
-    font-style: italic;
     font-size: 14px;
     font-weight: 700;
 }
@@ -830,12 +895,14 @@ footer h5 {
     height: 40px;
     padding: 7.5px 12px;
     font-size: 15px;
-    font-weight: 700;
-    font-style: italic;
     line-height: 25px;
     text-transform: uppercase;
     border: none;
     border-radius: 0;
+}
+.btn.active, .btn:active {
+	-webkit-box-shadow: none; 
+    box-shadow: none; 
 }
 
 .btn-xs {
@@ -870,12 +937,25 @@ footer h5 {
 }
 
 .btn-default {
-    color: #777;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    background-color: #e7e7e7;
-    background-image: linear-gradient(to bottom, #eeeeee, #dddddd);
-    background-repeat: repeat-x;
-    border-color: #dddddd #dddddd #b3b3b3 #b7b7b7;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #cb4d3d;
+   	border: 2px solid #cb4d3d;
+}
+
+.btn-default:hover,
+.btn-default:active,
+.btn-default:focus,
+.btn-default:active:focus,
+.btn-default:active:hover,
+.btn-default.active,
+.btn-default.focus,
+.btn-default.disabled,
+.btn-default[disabled] {
+	color: #cb4d3d;
+   	border: 2px solid #cb4d3d;
+    background-color: transparent;
+    outline: none;
 }
 
 .btn-primary {
@@ -1039,9 +1119,9 @@ footer h5 {
 /* product list */
 
 .product-thumb {
-    border: 1px solid #ddd;
     margin-bottom: 20px;
     overflow: auto;
+    background-color: #ffffff;
 }
 
 .product-thumb .image {
@@ -1067,7 +1147,8 @@ footer h5 {
 
 @media (min-width: 767px) {
     .product-list .product-thumb .image {
-        float: left;
+        display: inline-block;
+        vertical-align: top;
         padding: 0 15px;
     }
 }
@@ -1082,7 +1163,8 @@ footer h5 {
 }
 
 .product-list .product-thumb .caption {
-    margin-left: 230px;
+    display: inline-block;
+    vertical-align: top;
 }
 
 @media (max-width: 1200px) {
@@ -1156,53 +1238,12 @@ h2.price {
 }
 
 .product-list .product-thumb .button-group {
-    border-left: 1px solid #ddd;
+	border: none;
+	background-color: transparent;
+	overflow: hidden;
+    
 }
 
-@media (max-width: 768px) {
-    .product-list .product-thumb .button-group {
-        border-left: none;
-    }
-}
-
-.product-thumb .button-group button {
-    width: 60%;
-    border: none;
-    display: inline-block;
-    float: left;
-    background-color: #eee;
-    color: #888;
-    line-height: 38px;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.product-thumb .button-group button+button {
-    width: 20%;
-    border-left: 1px solid #ddd;
-}
-
-.product-thumb .button-group button:hover {
-    color: #444;
-    background-color: #ddd;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-@media (max-width: 1200px) {
-    .product-thumb .button-group button,
-    .product-thumb .button-group button+button {
-        width: 33.33%;
-    }
-}
-
-@media (max-width: 767px) {
-    .product-thumb .button-group button,
-    .product-thumb .button-group button+button {
-        width: 33.33%;
-    }
-}
 
 .thumbnails {
     overflow: auto;
