--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -213,7 +213,7 @@ header {
 
 @media (min-width: 768px) {
     .common-home .header-content {
-        top: 45%;
+        top: 50%;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
@@ -292,6 +292,7 @@ header {
     top: 4px;
     color: #c3c3c3;
     font-size: 30px;
+    z-index: 2;
 }
 
 .header-content .header-search .search-item:hover .fa {
@@ -328,7 +329,7 @@ header .header-scroll a {
 	color: #ffffff;
 	font-size: 16px;
 	text-transform: uppercase;
-	font-weight: 700;
+	font-weight: 300;
 }
 
 header .header-scroll i {
