--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -296,6 +296,28 @@ header {
 }
 
 
+.header-content .header-content-inner .slogan {
+	margin-top: 5px;
+	font-size: 35px;
+	font-weight: 300;
+	text-transform: uppercase;
+}
+
+.header-content .header-content-inner .slogan span {
+	color: #cd4e37;
+}
+
+.header-content .header-content-inner .slogan-b {
+    display: inline-block;
+    vertical-align: baseline;
+    font-weight: 700;
+    background-color: #ffffff;
+    line-height: 28px;
+    padding: 2px 3px 3px 3px;
+    color: #383838;
+}
+
+
 .header-content .header-search {
     position: absolute;
     top: 100px;
@@ -1501,9 +1523,14 @@ h2.price {
 	border-radius: 0!important;
 }
 
+.bootstrap-datetimepicker-widget td:hover {
+	border-radius: 0!important;
+}
+
 .bootstrap-datetimepicker-widget td.active,
 .bootstrap-datetimepicker-widget td.active:hover {
 	background-color: #cd4e37 !important;
+	border-radius: 0!important;
 }
 
 .option-time .radio {
